# hdag

./: .gitignore  CMakeLists.txt  README.md  notes.txt
.github/workflows/: test.yml
include/hdag/: arr.h  bundle.h  cat_iter.h  concat_seq.h  ctx.h  darr.h  db.h  dot.h  edge.h  fanout.h  fault.h  file.h  file_pre.h  hash.h  hash_seq.h  hashes.h  hdarr.h  iter.h  iter_prop.h  list_iter.h  list_seq.h  misc.h  node.h  node_iter.h  node_seq.h  nodes.c  nodes.h  rc.h  res.h  seq.h  sized_seq.h  target.h  targets.h  txt_node_iter.h  txt_node_seq.h  type.h
lib/hdag/: arr.c  bundle.c  cat_iter.c  concat_seq.c  ctx.c  darr.c  db.c  dot.c  file.c  file_pre.c  hash.c  hash_seq.c  hashes.c  hdarr.c  iter.c  list_iter.c  list_seq.c  misc.c  node.c  node_iter.c  node_seq.c  nodes.c  rc.c  res.c  seq.c  txt_node_iter.c  txt_node_seq.c  type.c
src/hdag/: hdag-file-from-txt.c  hdag-file-to-dot.c  hdag-file-to-txt.c
src/hdagt/: hdagt-arr.c  hdagt-bundle.c  hdagt-darr.c  hdagt-file.c  hdagt-misc.c  hdagt-rc.c  hdagt-res.c
